# MindIE-LLM

./: .clang-format  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  LICENSE.md  OWNERS  README.md  build.sh  code_of_conduct.md  config.conf  contributing.md  dependency.json  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  style.cfg
examples/atb_models/atb_framework/operations/: CMakeLists.txt
examples/atb_models/tests/fuzztest/: CMakeLists.txt  main.cpp
examples/atb_models/tests/modeltest/: README.md  README_NEW.md  pyproject.toml  requirements.txt  run.sh
examples/atb_models/tests/unittest/: CMakeLists.txt
mindie_llm/connector/cpp/: CMakeLists.txt  parallel_convert.cpp
mindie_llm/text_generator/cpp/memory_bridge/: CMakeLists.txt  init.cpp  swapper.h  swapper_impl.cpp
proto/: CMakeLists.txt  model_execute_data.proto
src/server/: CMakeLists.txt  README.md  options.cmake
src/server/conf/: config.json
src/server/daemon/: CMakeLists.txt  llm_daemon.cpp
src/server/endpoint/: CMakeLists.txt  endpoint.cpp  endpoint.h  endpoint_def.cpp  endpoint_def.h
src/server/endpoint/grpc_wrapper/: dmi_msg_receiver.cpp  dmi_msg_receiver.h  dmi_msg_sender.cpp  dmi_msg_sender.h  grpc_communication_mng.cpp  grpc_communication_mng.h  grpc_context.h  grpc_handler.cpp  grpc_handler.h  grpc_wrapper.cpp  grpc_wrapper.h  prefillAndDecodeCommunication.proto
src/server/endpoint/health_checker/: health_checker.cpp  health_checker.h  simulate_request_executor.cpp  simulate_request_executor.h  simulate_task_runner.cpp  simulate_task_runner.h
src/server/endpoint/http_wrapper/: dmi_role.cpp  dmi_role.h  http_handler.cpp  http_handler.h  http_metrics.cpp  http_metrics.h  http_server.cpp  http_server.h  http_ssl.cpp  http_ssl.h  http_ssl_secret.cpp  http_ssl_secret.h  http_wrapper.cpp  http_wrapper.h  prometheus_metrics.cpp  prometheus_metrics.h
src/server/endpoint/single_llm_req_handler/: single_llm_decode_req_handler.cpp  single_llm_decode_req_handler.h  single_llm_pnd_req_handler.cpp  single_llm_pnd_req_handler.h  single_llm_prefill_req_handler.cpp  single_llm_prefill_req_handler.h  single_llm_req_handler_base.cpp  single_llm_req_handler_base.h
src/server/endpoint/single_req_infer_interface/: parse_protocol.cpp  parse_protocol.h  single_req_infer_interface_base.cpp  single_req_infer_interface_base.h  single_req_openai_infer_interface.cpp  single_req_openai_infer_interface.h  single_req_self_develop_infer_interface.cpp  single_req_self_develop_infer_interface.h  single_req_tgi_text_infer_interface.cpp  single_req_tgi_text_infer_interface.h  single_req_triton_text_infer_interface.cpp  single_req_triton_text_infer_interface.h  single_req_triton_token_infer_interface.cpp  single_req_triton_token_infer_interface.h  single_req_vllm_infer_interface.cpp  single_req_vllm_infer_interface.h  single_req_vllm_openai_completions_infer_interface.cpp  single_req_vllm_openai_completions_infer_interface.h  single_req_vllm_openai_infer_interface.cpp  single_req_vllm_openai_infer_interface.h
src/server/endpoint/utils/: SensitiveInfoManager.cpp  SensitiveInfoManager.h  base64_util.cpp  base64_util.h  dcmi_wrapper.cpp  dcmi_wrapper.h  dresult_event_dispatcher.cpp  dresult_event_dispatcher.h  event_dispatcher.cpp  event_dispatcher.h  grpc_tls_function_expansion.cpp  grpc_tls_function_expansion.h  http_rest_resource.cpp  http_rest_resource.h  https_server_helper.cpp  https_server_helper.h  infer_param.cpp  infer_param.h  json_util.cpp  json_util.h  parameters_checker.cpp  parameters_checker.h  random_generator.cpp  random_generator.h  retry_task.h  threadpool_monitor.cpp  threadpool_monitor.h
src/server/include/: dcmi_interface_api.h  infer_tokenizer.h
src/server/infer_instances/: CMakeLists.txt  infer_instances.cpp  infer_instances.h
src/server/scripts/: A2_double_machine.md  A2_double_machine.sh  A2_single_machine.md  A2_single_machine.sh  A3_single.md  A3_single.sh  health_probe.md  set_env.sh
src/server/tokenizer/: CMakeLists.txt  infer_tokenizer.cpp  setup_tokenizer.py
src/server/tokenizer/mies_tokenizer/: __init__.py  file_utils.py  io_utils.py  tokenizer.py
src/utils/: CMakeLists.txt  check_utils.cpp  common_util.cpp  env_util.cpp  error.cpp  hse_cryptor_helper.cpp  id_utils.cpp  memory_utils.cpp  pid_manage.cpp  process_group.cpp  qps_tracker.cpp  safe_envvar.cpp  safe_io.cpp  safe_path.cpp  safe_result.cpp  shared_memory.cpp  string_utils.cpp  thread_group_cc.cpp
src/utils/log/: CMakeLists.txt  file_system.cpp  file_utils.cpp  log.cpp  log_config.cpp  log_config.h  log_level_dynamic_handler.cpp  log_level_dynamic_handler.h  log_utils.cpp  log_utils.h  logger_def.h  spdlog.h
src/utils/system_log/: CMakeLists.txt  system_log.cpp
tests/dlt/: CMakeLists.txt  crash_handler.cpp  crash_handler.h  readme.md  utils.cmake
tests/dlt/fuzztest/executor/: CMakeLists.txt  communicator_test.cpp  executor_test.cpp  grpc_communicator_test.cpp  ipc_communicator_test.cpp
tests/dlt/it/: CMakeLists.txt  test_llm_engine.cpp  test_self_attn_block_manager_prefix.cpp  test_server_OpenAi.cpp  test_server_TGI.cpp  test_server_vLLM_OpenAi.cpp
tests/dlt/st/: CMakeLists.txt
tests/dlt/st/config/: scene.json
tests/dlt/st/framework/: CMakeLists.txt  environment.cpp  scene.cpp
tests/dlt/st/include/: environment.h  noncopyable.h  scene.h
tests/dlt/st/testcase/: CMakeLists.txt  main.cpp  request_testcase.cpp  start_testcase.cpp
tests/dlt/st/utils/: ReadMe.md  connector_mock.py  unshare.sh
tests/dlt/ut/: CMakeLists.txt
tests/dlt/ut/block_manager/: CMakeLists.txt  block_obj_pool_test.cpp  block_table_test.cpp  block_tracker_test.cpp  copy_on_write_tracker_test.cpp  cpu_npu_block_allocator_test.cpp  evictor_test.cpp  hashless_block_allocator_test.cpp  hashless_block_manager_test.cpp  hashless_block_test.cpp  hashless_test_framework.cpp  hit_rate_calculator_test.cpp  test_sp_block_manager.cpp  (+7 more)
tests/fuzztest_llmmanager/: CMakeLists.txt
tests/fuzztest_llmmanager/llm_manager/: config.json  llm_infer_engine.cpp  llm_infer_engine.h  ranktable.json  test_llm_manager_test.cpp
(+2660 files in other folders)
